--- a/Views/User/ManagePostRooms.cshtml
+++ b/Views/User/ManagePostRooms.cshtml
@@ -37,66 +37,68 @@
 <div class="container">
     <div class="js-list-post row justify-content-center mb-3">
         <div class="col-md-12">
+            @*Render dữ liệu từ API controller, Aciton là GetUserPostRooms*@
             <!--<div class="card shadow-sm rounded-3">
-                <div class="card-body">
-                    <div class="row">
-                        <div class="col-md-12 col-lg-3 col-xl-3 mb-4 mb-lg-0">
-                            <div class="rounded overflow-hidden position-relative">
-                                <a href="#!">
-                                    <img src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/E-commerce/Products/img%20(4).webp" class="w-100">
-                                </a>
-                                <div class="image__count"><i class="fa-fw select-all fas size-12 me-1"></i><span>5</span></div>
-                            </div>
-                        </div>
-                        <div class="col-md-6 col-lg-5 col-xl-5">
-                            <div class="bg-light d-inline text-uppercase p-1" style="font-size: 0.7rem;">Phòng trọ cho thuê</div>
-                            <h6>Tìm người ở ghép</h6>
-                            <div class="mt-1 mb-0">
-                                <span class="text-success">1.3 triệu/tháng</span>
-                                <span class="text-light"> • </span>
-                                <span>36m<sup>2</sup></span>
-                                <span class="text-light"> • </span>
-                                <span>Quận 7, Thành Phố Hồ Chí Minh<br></span>
-                            </div>
-                            <div class="mb-2 d-flex column-gap-2">
-                                <div>
-                                    <div>Mã tin</div>
-                                    27
-                                </div>
-                                <div>
-                                    <div>Ngày đăng tin</div>
-                                    22:59 11/11/2024
-                                </div>
-                                <div>
-                                    <div>Trạng thái</div>
-                                    <span class="text-success bg-light rounded p-1" admin-hide="true">Đã duyệt</span>
-                                </div>
-                            </div>
-                            <span user-hide="true" class="small text-bg-success rounded p-1 d-lg-none">Tin đang hiện</span>-->
-                            @*<p class="text-truncate mb-4 mb-md-0">
-                                    There are many variations of passages of Lorem Ipsum available, but the majority
-                                    have suffered alteration in some form, by injected humour, or randomised words
-                                    which don't look even slightly believable.
-                                </p>*@
-                        <!--</div>
-                        <div class="border-start col-lg-2 col-xl-2 d-none d-lg-flex d-xl-flex justify-content-center align-items-center">
-                            <span user-hide="true" class="small text-bg-success rounded p-1">Tin đang hiện</span>
-                        </div>
-                        <div class="col-md-6 col-lg-2 col-xl-2 border-sm-start-none border-start mt-3 mt-md-0 d-flex flex-column justify-content-center">
-                            <button data-mdb-button-init="" data-mdb-ripple-init="" class="btn btn-outline-success btn-sm" type="button" data-mdb-button-initialized="true">Sửa tin</button>-->-->
-                            @*<button data-mdb-button-init="" data-mdb-ripple-init="" class="btn btn-outline-primary btn-sm mt-2" type="button" data-mdb-button-initialized="true">
-                                Xem tin đăng
-                                </button>*@
-                            <!--<button class="btn btn-outline-light btn-sm mt-2" type="button">
-                                Ẩn tin
-                            </button>
-                            <button class="btn btn-outline-danger btn-sm mt-2" type="button">
-                                Xóa tin
-                            </button>
-                        </div>
+        <div class="card-body">
+            <div class="row">
+                <div class="col-md-12 col-lg-3 col-xl-3 mb-4 mb-lg-0">
+                    <div class="rounded overflow-hidden position-relative">
+                        <a href="#!">
+                            <img src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/E-commerce/Products/img%20(4).webp" class="w-100">
+                        </a>
+                        <div class="image__count"><i class="fa-fw select-all fas size-12 me-1"></i><span>5</span></div>
                     </div>
                 </div>
-            </div>-->
+                <div class="col-md-6 col-lg-5 col-xl-5">
+                    <div class="bg-light d-inline text-uppercase p-1" style="font-size: 0.7rem;">Phòng trọ cho thuê</div>
+                    <h6>Tìm người ở ghép</h6>
+                    <div class="mt-1 mb-0">
+                        <span class="text-success">1.3 triệu/tháng</span>
+                        <span class="text-light"> • </span>
+                        <span>36m<sup>2</sup></span>
+                        <span class="text-light"> • </span>
+                        <span>Quận 7, Thành Phố Hồ Chí Minh<br></span>
+                    </div>
+                    <div class="mb-2 d-flex column-gap-2">
+                        <div>
+                            <div>Mã tin</div>
+                            27
+                        </div>
+                        <div>
+                            <div>Ngày đăng tin</div>
+                            22:59 11/11/2024
+                        </div>
+                        <div>
+                            <div>Trạng thái</div>
+                            <span class="text-success bg-light rounded p-1" admin-hide="true">Đã duyệt</span>
+                        </div>
+                    </div>
+                    <span user-hide="true" class="small text-bg-success rounded p-1 d-lg-none">Tin đang hiện</span>-->
+            @*<p class="text-truncate mb-4 mb-md-0">
+            There are many variations of passages of Lorem Ipsum available, but the majority
+            have suffered alteration in some form, by injected humour, or randomised words
+            which don't look even slightly believable.
+        </p>*@
+            <!--</div>
+    <div class="border-start col-lg-2 col-xl-2 d-none d-lg-flex d-xl-flex justify-content-center align-items-center">
+        <span user-hide="true" class="small text-bg-success rounded p-1">Tin đang hiện</span>
+    </div>
+    <div class="col-md-6 col-lg-2 col-xl-2 border-sm-start-none border-start mt-3 mt-md-0 d-flex flex-column justify-content-center">
+        <button data-mdb-button-init="" data-mdb-ripple-init="" class="btn btn-outline-success btn-sm" type="button" data-mdb-button-initialized="true">Sửa tin</button>-->
+            -->
+            @*<button data-mdb-button-init="" data-mdb-ripple-init="" class="btn btn-outline-primary btn-sm mt-2" type="button" data-mdb-button-initialized="true">
+        Xem tin đăng
+        </button>*@
+            <!--<button class="btn btn-outline-light btn-sm mt-2" type="button">
+                        Ẩn tin
+                    </button>
+                    <button class="btn btn-outline-danger btn-sm mt-2" type="button">
+                        Xóa tin
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>-->
         </div>
     </div>
 </div>
