--- a/Views/Shared/_Paging.cshtml
+++ b/Views/Shared/_Paging.cshtml
@@ -1,4 +1,6 @@
-﻿@if (Model.TotalPages > 0) //2 trang
+﻿@model HoiTroWebsite.Models2.Paginate
+
+@if (Model.TotalPages > 0) //2 trang
 {
     <ul class="pagination pagination-danger justify-content-center">
 
