--- a/Views/User/ListImg.cshtml
+++ b/Views/User/ListImg.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<HoiTroWebsite.Models.RoomImg>
+﻿@model IEnumerable<HoiTroWebsite.Models.RoomImage>
 
 @foreach (var i in Model)
 {
