--- a/Views/User/Login.cshtml
+++ b/Views/User/Login.cshtml
@@ -99,5 +99,5 @@
 </div>
 
 @section footer {
-    <script src="~/Scripts/my-js/login.logout.js"></script>
+    <script src="~/Scripts/my-js/login.logout.effect.js"></script>
 }
