--- a/Areas/Admin/Views/RoomInfoes/Create.cshtml
+++ b/Areas/Admin/Views/RoomInfoes/Create.cshtml
@@ -19,14 +19,6 @@
     </div>
 
     <div class="form-group">
-        @Html.Label("Mô tả", htmlAttributes: new { @class = "control-label " })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.brief_description, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.brief_description, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    <div class="form-group">
         @Html.Label("Chi tiết", htmlAttributes: new { @class = "control-label " })
         <div class="col-md-10">
             @Html.TextAreaFor(model => model.detail_description)
@@ -53,8 +45,8 @@
     <div class="form-group">
         @Html.Label("Khu vực", htmlAttributes: new { @class = "control-label " })
         <div class="col-md-10">
-            @Html.EditorFor(model => model.area, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.area, "", new { @class = "text-danger" })
+            @Html.EditorFor(model => model.acreage, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.acreage, "", new { @class = "text-danger" })
         </div>
     </div>
 
