--- a/Areas/Admin/Views/Shared/_AdminLayoutPage.cshtml
+++ b/Areas/Admin/Views/Shared/_AdminLayoutPage.cshtml
@@ -86,7 +86,7 @@
                             </a>
                         </li>
 
-                        <li class="sidebar-item @RenderSection("ql_roomImg_active", false)">
+                        <li class="sidebar-item @RenderSection("ql_RoomImage_active", false)">
                             <a href="@Url.Action("Index", "RoomImages" )" class="sidebar-link">
                                 <i class="fa-fw select-all fas"></i>
                                 <span>Quản lý ảnh slide tin đăng</span>
