--- a/Views/Api_/GetUserPostRooms.cshtml
+++ b/Views/Api_/GetUserPostRooms.cshtml
@@ -12,11 +12,11 @@
     (string, string) trang_thai = room.isApproved == true ? ("text-success", "Đã duyệt") : ("text-danger", "Chưa duyệt");
     (string, string) trang_thai_an_tin = room.hide == true ? ("text-bg-success", "Tin đang hiện") : ("text-bg-danger", "Tin đang ẩn");
     (string, string) nut_an_hien = room.hide == true ? ("btn-outline-light", "Ẩn tin") : ("btn-outline-succes", "Hiện tin");
-    if (room.RoomImgs.Count != 0)
+    if (room.RoomImages.Count != 0)
     {
-        ten_anh = room.RoomImgs.Where(ri => ri.order == 0).FirstOrDefault().fileName;
-        path = room.RoomImgs.Where(ri => ri.order == 0).FirstOrDefault().folder + ten_anh;
-        so_luong_anh = room.RoomImgs.Count;
+        ten_anh = room.RoomImages.Where(ri => ri.order == 0).FirstOrDefault().file_name;
+        path = room.RoomImages.Where(ri => ri.order == 0).FirstOrDefault().imagePath;
+        so_luong_anh = room.RoomImages.Count;
     }
 
     <div class="col-md-12">
@@ -36,9 +36,9 @@
                         <div class="bg-light d-inline text-uppercase p-1" style="font-size: 0.7rem;">@room.RoomType.title</div>
                         <h6>@room.title</h6>
                         <div class="mt-1 mb-0">
-                            <span class="text-success">1.3 triệu/tháng</span>
+                            <span class="text-success">@gia_tien/tháng</span>
                             <span class="text-light"> • </span>
-                            <span>36m<sup>2</sup></span>
+                            <span>@(room.acreage)m<sup>2</sup></span>
                             <span class="text-light"> • </span>
                             <span>Quận 7, Thành Phố Hồ Chí Minh<br></span>
                         </div>
