--- a/Views/MainPartial/GetSupport.cshtml
+++ b/Views/MainPartial/GetSupport.cshtml
@@ -22,7 +22,7 @@
                     <div class="single_advisor_profile wow fadeInUp" data-wow-delay="0.2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">
                         <!-- Team Thumb-->
                         <div class="advisor_thumb">
-                            <img src="@i.avtImage" alt="">
+                            <img src="@i.imagePath" alt="">
                             <!-- Social Info-->
                             <div class="social-info">
                                 <a href="@i.FBlink"><i class="fa fa-facebook"></i></a>
