--- a/Areas/Admin/Views/RoomInfoes/Details.cshtml
+++ b/Areas/Admin/Views/RoomInfoes/Details.cshtml
@@ -19,7 +19,7 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.brief_description)
+            @Html.DisplayFor(model => model.detail_description)
         </dd>
 
         <dt>
@@ -52,7 +52,7 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.area)
+            @Html.DisplayFor(model => model.acreage)
         </dd>
 
         <dt>
