--- a/Areas/Admin/Views/News/Edit.cshtml
+++ b/Areas/Admin/Views/News/Edit.cshtml
@@ -26,7 +26,7 @@
                 <input type="file" name="img" id="img" accept=".jpg, .png, .gif, .jpeg, .bmp" onchange="previewImage(event)" />
             </div>
             <div class="col-md-4">
-                <img id="preview" src="@Model.imagePath" width="100px" /> <!--Lưu ý quyết định nd lưu imagePath trên csdl-->
+                <img id="preview" src="@Model.file_name" width="100px" /> <!--Lưu ý quyết định nd lưu imagePath trên csdl-->
             </div>
         </div>
 
