--- a/Areas/Admin/Views/News/Delete.cshtml
+++ b/Areas/Admin/Views/News/Delete.cshtml
@@ -21,7 +21,7 @@
 
         <dd>
             <div class="col-md-4">
-                <img src="~/Content/images/@Model.imagePath" width="100px" />
+                <img src="~/Content/images/@Model.file_name" width="100px" />
             </div>
         </dd>
 
