--- a/Areas/Admin/Views/RoomImages/Delete.cshtml
+++ b/Areas/Admin/Views/RoomImages/Delete.cshtml
@@ -20,7 +20,7 @@
 
         <dd>
             <div class="col-md-4">
-                <img src="~/Content/images/@Model.imagePath" width="100px" alt="@Model.imagePath" />
+                <img src="~/Content/images/@Model.file_name" width="100px" alt="@Model.file_name" />
             </div>
         </dd>
 
