--- a/Areas/Admin/Views/RoomInfoes/Edit.cshtml
+++ b/Areas/Admin/Views/RoomInfoes/Edit.cshtml
@@ -21,14 +21,6 @@
     </div>
 
     <div class="form-group">
-        @Html.Label("Mô tả", htmlAttributes: new { @class = "control-label " })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.brief_description, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.brief_description, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    <div class="form-group">
         @Html.Label("Chi tiết", htmlAttributes: new { @class = "control-label " })
         <div class="col-md-10">
             @Html.TextAreaFor(model => model.detail_description)
@@ -53,14 +45,6 @@
     </div>
 
     <div class="form-group">
-        @Html.Label("Khu vực", htmlAttributes: new { @class = "control-label " })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.area, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.area, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    <div class="form-group">
         @Html.Label("Địa chỉ", htmlAttributes: new { @class = "control-label " })
         <div class="col-md-10">
             @Html.EditorFor(model => model.location, new { htmlAttributes = new { @class = "form-control" } })
@@ -79,11 +63,9 @@
     <div class="form-group">
         @Html.Label("Được duyệt", htmlAttributes: new { @class = "control-label" })
         <div class="col-md-10">
-            <div class="checkbox">
-                @* Kiểm tra giá trị của isApproved, nếu là null thì mặc định là false *@
-                @Html.CheckBoxFor(model => model.isApproved, new { @class = "checkbox-inline" })
-                @Html.ValidationMessageFor(model => model.isApproved, "", new { @class = "text-danger" })
-            </div>
+            @{
+                bool app = (Model.isApproved.GetValueOrDefault(false) ? true : false);
+            }
         </div>
     </div>
 
